request(block-grad-image.sass): #29075 -- fixed forehead cropping on homepage

--- a/src/components/block/block-grad-image/block-grad-image.sass
+++ b/src/components/block/block-grad-image/block-grad-image.sass
@@ -7,7 +7,12 @@
     @extend .overlay
     @include tablet
       opacity: 0
-    width: 65%
+    width: 80%
+
+    @media screen and (min-width: 1400px) and (max-width: 1700px)
+      width: 82%
+
+
 
     &--mobile
       @extend .overlay
@@ -26,11 +31,16 @@
       width: 100%
       height: 30rem
     @include phone
-      height: 20rem
+      height: 25rem
     z-index: -1
-    margin-left: 50%
+    margin-left: 65%
     // background-position: right
-    width: 50%
+    width: 35%
+
+    @media screen and (min-width: 1400px) and (max-width: 1700px)
+      width: 30%
+      margin-left: 70%
+    
 
   &__container
     @extend .container
